test: contacts index route test

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,5 +8,8 @@ one:
   email: 'test_user@example.com'
   authentication_token: 'blah123test'
   confirmed_at: <%= Time.now %>
-# column: value
-#
+
+two:
+  email: <%= Faker::Internet.email %>
+  authentication_token: 'test123'
+  confirmed_at: <%= Time.now %>
