--- a/test/fixtures/organizations.yml
+++ b/test/fixtures/organizations.yml
@@ -1,7 +1,11 @@
 one:
   name: <%= Faker::Company.name %>
+  address: <%= Faker::Address.street_name %>
+  tax_payer_number: <%= Faker::Company.ein %>
   account: leap_stark
 
 two:
   name: <%= Faker::Company.name %>
+  address: <%= Faker::Address.street_name %>
+  tax_payer_number: <%= Faker::Company.ein %>
   account: another_one
